# ppaass-android-old2

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ppaass/agent/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/ppaass/rust/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/: ProtocolTest.java
app/src/main/java/com/ppaass/agent/: PpaassVpnApplication.java
app/src/main/java/com/ppaass/agent/activity/: JniTest.java  MainActivity.java
app/src/main/java/com/ppaass/agent/common/: AbstractFlowObservable.java  IFlowObserver.java
app/src/main/java/com/ppaass/agent/cryptography/: CryptographyUtil.java
app/src/main/java/com/ppaass/agent/jni/: ExampleNativeObject.java  RustLibrary.java
app/src/main/java/com/ppaass/agent/rust/: PpaassVpnApplication.java
app/src/main/java/com/ppaass/agent/service/: IVpnConst.java  IpPacketProcessor.java  IpStackObservable.java  IpStackObserver.java  PpaassVpnNettyTcpChannelFactory.java  PpaassVpnService.java  PpaassVpnTcpChannelFactory.java  PpaassVpnUdpChannelFactory.java  (+2 more)
app/src/main/jni/: Android.mk  com_ppaass_agent_activity_JniTest.h  jnitest.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/raw/: agentprivatekey  proxypublickey
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/ppaass/agent/: DnsTest.java  EncryptionTest.java  ExampleUnitTest.java  ProtocolTest.java  SerializerTest.java  Test.java
gradle/wrapper/: gradle-wrapper.properties
rust/: .gitignore  Cargo.toml  rustfmt.toml
rust/.cargo/: config
rust/src/: device.rs  lib.rs  server.rs  tcp.rs  udp.rs  util.rs
rust/src/tcp/: connection.rs  model.rs
rust/src/udp/: handler.rs
(+180 files in other folders)
