[package]
edition = "2021"
name = "rust"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
android_logger = "0.11.3"
anyhow = "1.0.68"
dns-parser = "0.8.0"
etherparse = "0.13.0"
futures = "0.3.25"
jni = "0.20.0"
libc = "0.2.139"
log = "0.4.17"
ndk = "0.7.0"
ndk-glue = "0.7.0"
pretty-hex = "0.3.0"
rand = "0.8.5"
tokio = {version = "1.23.0", features = ["macros", "time", "net", "io-util", "rt-multi-thread", "fs"]}
tokio-util = "0.7.4"
