[package]
edition = "2021"
name = "rust"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
android_logger = "0.12"
anyhow = "1.0"
bytes = "1.4"
dns-parser = "0.8"
futures = "0.3"
futures-util = "0.3"
jni = "0.20"
log = "0.4"
once_cell = "1.17"
pretty-hex = "0.3"
rand = "0.8"
smoltcp = "0.8"
tokio = {version = "1.25", features = ["macros", "time", "net", "io-util", "rt-multi-thread", "fs"]}
tokio-util = {version = "0.7", features = ["io", "codec"]}
uuid = {version = "1.3", features = ["v4"]}
